# murmur

./: .env.example  .gitignore  .prettierignore  LICENSE  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.test.tsx  App.tsx  main.tsx  styles.css  use-murmur.test.tsx  use-murmur.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md
apps/desktop/src-tauri/src/: config.rs  lib.rs  main.rs  offline_cmd.rs
docs/: RELEASING.md
docs/design/: mvp-brief.md
docs/superpowers/: PROGRESS.md
docs/superpowers/plans/: 2026-06-23-murmur-foundation.md  2026-06-23-phase-1-cli.md  2026-06-23-phase-10-prompt.md  2026-06-23-phase-11-ui-advanced.md  2026-06-23-phase-12-privacy.md  2026-06-23-phase-13-whisper.md  2026-06-23-phase-14-wake-word.md  2026-06-23-phase-15-plugins.md  2026-06-23-phase-16-packaging.md  2026-06-23-phase-2-capsule-ui.md  2026-06-23-phase-3-hotkey.md  2026-06-23-phase-4-audio.md  2026-06-23-phase-5-openai-realtime.md  2026-06-23-phase-6-sqlite.md  2026-06-23-phase-7-rag-retrieval.md  2026-06-23-phase-8-rag-summaries-facts.md  2026-06-23-phase-9-orchestrator.md  2026-06-24-offline-mode.md  2026-06-24-realtime-function-calling.md
docs/superpowers/specs/: 2026-06-23-murmur-foundation-and-design-system-design.md  2026-06-23-phase-1-cli.md  2026-06-23-phase-10-prompt.md  (+16 more)
(+35 files in other folders)
