[package]
name = "murmur-desktop"
version = "0.0.0"
edition = "2021"

[lib]
name = "murmur_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
